fix: google buttons and animations

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -175,9 +175,9 @@
                     <span class="mx-4 flex-shrink text-neutral-400 text-sm">OR</span>
                     <div class="flex-grow border-t border-neutral-700"></div>
                   </div>
-                  <div class="flex items-center justify-center w-full">{% include "components/google_onetap.html" %}</div>
                 </div>
               </form>
+              <div class="flex items-center justify-center w-full px-6">{% include "components/google_onetap.html" %}</div>
               <p class="text-neutral-400 text-xs py-6 text-center">
                 By logging in, you agree to Re-Dcrypt's
                 <a href="{% url 'terms_and_conditions' %}"
