--- a/templates/about.html
+++ b/templates/about.html
@@ -62,7 +62,7 @@ model-viewer {
             <p class="text-neutral-400 text-start mb-4">
               To create an engaging platform that challenges minds, encourages creative thinking, and brings together a community of problem solvers.
             </p>
-            <div class="flex flex-col md:flex-row gap-4 w-full">
+            <div class="flex flex-col md:flex-row gap-4 w-full hidden">
               <a href="{% url 'contact' %}"
                  class="w-full md:w-auto bg-neutral-900/70 shadow-inset-white hover:bg-green-600 text-neutral-100 hover:text-neutral-50 font-bold py-3 px-6 rounded-full transition-all duration-300 flex items-center justify-center gap-2">
                 <i class="ph-bold ph-chat-circle-text"></i>
@@ -102,7 +102,7 @@ model-viewer {
         <div class="flex flex-col items-center gap-6">
           <h3 class="text-2xl font-bold text-neutral-100">Connect With Us</h3>
           <div class="flex flex-wrap justify-center gap-8">
-            <a href="mailto:hunt@redcrypt.xyz"
+            <a href="mailto:foss@bennett.edu.in"
                class="text-3xl text-neutral-400 transition-all duration-300 hover:text-green-500 hover:scale-110">
               <i class="ph-fill ph-envelope"></i>
             </a>
@@ -110,7 +110,7 @@ model-viewer {
                class="text-3xl text-neutral-400 transition-all duration-300 hover:text-green-500 hover:scale-110">
               <i class="ph-fill ph-discord-logo"></i>
             </a>
-            <a href="https://instagram.com/re.dcrypt"
+            <a href="https://instagram.com/foss_bu"
                class="text-3xl text-neutral-400 transition-all duration-300 hover:text-green-500 hover:scale-110">
               <i class="ph-fill ph-instagram-logo"></i>
             </a>
@@ -118,14 +118,14 @@ model-viewer {
                class="text-3xl text-neutral-400 transition-all duration-300 hover:text-green-500 hover:scale-110">
               <i class="ph-fill ph-youtube-logo"></i>
             </a>
-            <a href="https://github.com/Re-Dcrypt"
+            <a href="https://github.com/FOSS-Club-BU"
                class="text-3xl text-neutral-400 transition-all duration-300 hover:text-green-500 hover:scale-110">
               <i class="ph-fill ph-github-logo"></i>
             </a>
-            <a href="https://www.reddit.com/r/redcrypt/"
+            <!-- <a href="https://www.reddit.com/r/redcrypt/"
                class="text-3xl text-neutral-400 transition-all duration-300 hover:text-green-500 hover:scale-110">
               <i class="ph-fill ph-reddit-logo"></i>
-            </a>
+            </a> -->
           </div>
           <div class="text-neutral-400 text-sm mt-4">
             <a href="{% url 'terms_and_conditions' %}"
