fix: update game logic for level completion and remove unused PWA files

--- a/templates/rules.html
+++ b/templates/rules.html
@@ -16,7 +16,7 @@
         <div class="w-20 h-20 rounded-full bg-green-600/20 flex items-center justify-center">
           <span class="material-symbols-outlined text-4xl text-green-500">menu_book</span>
         </div>
-        <h1 class="text-6xl font-black text-neutral-100">Rules</h1>
+        <h1 class="text-6xl font-black text-neutral-100"><a href="/4N5W3r">Rules</a></h1>
       </div>
     </div>
     <div class="md:w-1/2 p-5 bg-clip-padding mb-10 text-neutral-100">
