--- a/templates/public_profile.html
+++ b/templates/public_profile.html
@@ -26,7 +26,7 @@
             {% endif %}
             {% if profile.is_public_organization %}
             <p tabindex="0" class="focus:outline-none text-white text-lg pb-5">
-                <label for="School/Organization" class="text-green-600 text-lg"><b>School/Organization: </b></label> {{profile.organization}}
+                <label for="School/Organization" class="text-green-600 text-lg"><b>College/Organization: </b></label> {{profile.organization}}
             </p>
             {% endif %}
 
