--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -116,7 +116,7 @@
                   </div>
 
                   <div class="form-field">
-                    <label for="id_organization">School/Organization (Optional)</label>
+                    <label for="id_organization">College/Organization (Optional)</label>
                     <div class="relative">
                       <input type="text" name="organization" id="id_organization" placeholder="Your organization">
                     </div>
