--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -341,11 +341,11 @@
                         </div>
                         <div class="flex flex-col gap-y-2">
                           <label for="id_organization"
-                                 class="text-sm font-medium text-gray-400 text-start mx-1">School/Organization</label>
+                                 class="text-sm font-medium text-gray-400 text-start mx-1">College/Organization</label>
                           <input type="text"
                                  name="organization"
                                  id="id_organization"
-                                 placeholder="Enter your school or organization"
+                                 placeholder="Enter your College/School or organization"
                                  class="w-full bg-neutral-900/70 shadow-inset-white backdrop-blur-sm text-gray-100 rounded-xl py-3 px-4 transition-all duration-300 hover:ring hover:ring-green-500 focus:ring focus:ring-green-500 focus:outline-none">
                         </div>
                         <div class="flex justify-center mt-4">
