--- a/templates/404.html
+++ b/templates/404.html
@@ -27,14 +27,14 @@
           <p class="text-xl text-neutral-300 mb-6">Looks like you went a little too far out of the box</p>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-8">
             <div class="p-4 bg-neutral-800/30 rounded-xl"
-                 data-aos="fade-right"
+                 data-aos="fade-up"
                  data-aos-delay="200"
                  data-aos-duration="800">
               <span class="material-symbols-outlined text-green-500 text-2xl mb-2">travel_explore</span>
               <p class="text-neutral-300">Lost in the cryptic maze?</p>
             </div>
             <div class="p-4 bg-neutral-800/30 rounded-xl"
-                 data-aos="fade-left"
+                 data-aos="fade-up"
                  data-aos-delay="300"
                  data-aos-duration="800">
               <span class="material-symbols-outlined text-blue-500 text-2xl mb-2">lightbulb</span>
